# cuda_aware

./: CMakeLists.txt  README.md  main.cu
share/: wheat_out.txt
